# loglocal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/loglocal/: __init__.py  _loglocal.py  _trace.py  logger.py
src/loglocal/default/: __init__.py
src/loglocal/models/: __init__.py  _config_models.py  log_local.py
