[project]
name = "loglocal"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mahamudul Hasan", email = "919.hasan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
